fix(events): tolerate null payload/meta values in EventEnvelope + surface poison outbox rows
Map.copyOf(payload/meta) NPEs on any JSON-null field value (e.g. an
all-classes regulatory fee whose classCode is null). The exception was
swallowed by the outbox drain, head-of-line-blocking every later row —
any service emitting a payload with a null field silently stalled its
v1.1 outbox. Take a null-tolerant unmodifiable copy instead, and log the
poison row + exception in the drain's catch so the stall class is
diagnosable in production rather than silent.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>